--- a/style.css
+++ b/style.css
@@ -388,6 +388,7 @@ body {
   font-weight: 500;
   width: 80%;
   font-size: 1.2rem;
+  padding-top: 10px;
   padding-bottom: 50px;
 }
 
@@ -464,7 +465,7 @@ a:active {
 @media screen and (max-width: 600px) {
   .image-section {
     width: 100%;
-    height: 20vh;
+    height: 30vh;
   }
 
   .form-section {
